--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -11,7 +11,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Run validator
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+      - name: Install test deps
         run: |
+          python -m pip install --upgrade pip
+          pip install pytest
+      - name: Build Pine and run validator
+        run: |
+          python3 scripts/build_pine.py
           chmod +x scripts/validate_pine.sh
           ./scripts/validate_pine.sh pine/backtest.pine
+      - name: Run unit tests
+        run: |
+          pytest -q
